# rust_collections

./: README.md
catboost/: Cargo.toml  adult.cbm  train_model.ipynb
catboost/catboost_info/: catboost_training.json  time_left.tsv
catboost/src/: main.rs
hecto/: README
hecto/src/: editor.rs  main.rs  terminal.rs
momento-lambda/: Cargo.toml
momento-lambda/src/: main.rs
os/blog_os/: Cargo.toml
polars/polars_expressions/: Cargo.toml
polars/quick_start/: Cargo.toml
polars/quick_start/src/: main.rs
practice/ex_10_0/: Cargo.toml
practice/ex_10_2/: Cargo.toml
practice/ex_10_3/: Cargo.toml
practice/ex_11_2/: Cargo.toml
practice/ex_13_1/: Cargo.toml
practice/ex_13_2/: Cargo.toml
practice/ex_15_1/: Cargo.toml
practice/ex_15_2/: Cargo.toml
practice/ex_15_3/: Cargo.toml
practice/ex_15_4/: Cargo.toml
practice/ex_15_5/: Cargo.toml
practice/ex_15_6/: Cargo.toml
practice/ex_16_1/: Cargo.toml
practice/ex_16_2/: Cargo.toml
practice/ex_16_3/: Cargo.toml
practice/ex_17_1/: Cargo.toml
practice/ex_17_2/: Cargo.toml
practice/ex_17_3/: Cargo.toml
practice/ex_4_2/: Cargo.toml
practice/ex_5_1/: Cargo.toml
practice/ex_5_3/: Cargo.toml
practice/ex_8_2/: Cargo.toml
practice/ex_8_3/: Cargo.toml
practice/ex_9_2/: Cargo.toml
practice/grrs/: Cargo.toml
practice/hello/: 404.html  hello.html
practice/ml/: README
practice/solana/: Dockerfile  README  docker-compose.yml  docker-sync.yml
practice/solana/sample2/: Cargo.toml  README
practice/トレイト/: Cargo.toml
sample/: README
shell/: README
shell/src/: main.rs
tokio/: ReadMe
(+59 files in other folders)
