[package]
name = "quick_start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
reqwest = {version = "0.11.11", features = ["blocking"]}
polars = "0.23.2"
polars-core = {version = "0.23.2", features=["ndarray"]}
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}